<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentListRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dcdcdc">

    <RelativeLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#bebebe"
        android:elevation="4dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/filterButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/filter"
            android:src="@drawable/ic_filter" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/search"
            android:src="@android:drawable/ic_menu_search" />

        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/filterButton"
            android:layout_toEndOf="@id/searchButton"
            android:hint="@string/search_in_list"
            android:inputType="text"
            android:maxLines="1" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="70dp" />

        <TextView
            android:id="@+id/textViewSozYok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_sentence_to_list_found"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:visibility="invisible" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
